Fix: Small Screen Compatibility
view more does not align still

--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,7 @@ section:not(#sidebar) {
 	}
 }
 
+
 /* Button */
 
 .btn-resume {
@@ -318,32 +319,34 @@ section:not(#sidebar) {
 	right: 0;
 }
 
+
 /* Headers */
-.title{
+
+.title {
 	color: #E25822;
 	font-size: 24px;
 	font-family: 'Montserrat', sans-serif;
 }
 
-.line{
-	display:block;
-	position:relative;
-	background-color:#E25822;
+.line {
+	display: block;
+	position: relative;
+	background-color: #E25822;
 	width: 35px;
-	height:4px;
-	top:5px;
+	height: 4px;
+	top: 5px;
 }
 
-#resume .title{
+#resume .title {
 	margin-top: 100px;
 	font-size: 24px;
 	text-align: left;
 }
 
-
-#portfolio .title{
+#portfolio .title {
 	text-align: left;
 }
+
 
 /* About Me */
 
@@ -465,6 +468,7 @@ input[type=submit]:hover {
 	margin-left: 20%;
 }
 
+
 /* The actual timeline (the vertical ruler) */
 
 #resume .timeline {
@@ -480,7 +484,7 @@ input[type=submit]:hover {
 #resume .timeline::after {
 	content: '';
 	position: absolute;
-	width: 3px;	
+	width: 3px;
 	background-color: white;
 	top: 420px;
 	bottom: -550px;
@@ -491,8 +495,7 @@ input[type=submit]:hover {
 
 /* Container around content */
 
-
-#resume .container{	
+#resume .container {
 	margin: auto;
 	margin-top: 30px;
 	/* inline-block hack */
@@ -510,15 +513,14 @@ input[type=submit]:hover {
 }
 
 #resume .box::after {
-  content: '';
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  background-color: white;
-  border-radius: 50%;
-  z-index: 1;
-  top: 405px;
-  
+	content: '';
+	position: absolute;
+	width: 20px;
+	height: 20px;
+	background-color: white;
+	border-radius: 50%;
+	z-index: 1;
+	top: 405px;
 }
 
 
@@ -532,6 +534,7 @@ input[type=submit]:hover {
 	left: 253.7%;
 }
 
+
 /* Place the container to the right */
 
 #resume .right {
@@ -542,13 +545,14 @@ input[type=submit]:hover {
 	left: -14.15%;
 }
 
+
 /* The actual content */
 
 #resume .content {
 	position: relative;
 }
 
-#resume .left .text-box{
+#resume .left .text-box {
 	position: relative;
 	width: 500px;
 	height: 400px;
@@ -560,7 +564,7 @@ input[type=submit]:hover {
 	color: black;
 }
 
-#resume .right .text-box{
+#resume .right .text-box {
 	position: relative;
 	width: 500px;
 	height: 400px;
@@ -570,36 +574,35 @@ input[type=submit]:hover {
 	text-align: left;
 	z-index: 1;
 	color: black;
-  	
 }
 
-#resume h2{
+#resume h2 {
 	font-size: 18px;
 }
 
-#resume p{
+#resume p {
 	font-size: 24px;
-	color:#2E3D48;
-	
+	color: #2E3D48;
 }
 
-#resume a{
-	position:relative;
+#resume a {
+	position: relative;
 	font-size: 20px;
-	color:#2E3D48;
+	color: #2E3D48;
 	text-decoration: underline;
-	top:600px;
+	top: 600px;
 }
+
 
 /* Portfolio */
 
-#portfolio{
+#portfolio {
 	padding-top: 10px;
 	margin-top: 600px;
 	padding-bottom: 35px;
 }
 
-#portfolio .container{
+#portfolio .container {
 	margin: auto;
 	margin-top: 30px;
 	/* inline-block hack */
@@ -609,38 +612,36 @@ input[type=submit]:hover {
 }
 
 #portfolio .box img {
-  opacity: 1;
-  display: block;
-  transition: .5s ease;
-  backface-visibility: hidden;
+	opacity: 1;
+	display: block;
+	transition: .5s ease;
+	backface-visibility: hidden;
 }
 
 #portfolio .box .middle {
-  transition: .5s ease;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  text-align: center;
+	transition: .5s ease;
+	opacity: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	text-align: center;
 }
 
 #portfolio .box:hover img {
-  opacity: 0.3;
+	opacity: 0.3;
 }
 
 #portfolio .box:hover .middle {
-  opacity: 1;
+	opacity: 1;
 }
 
 #portfolio .text {
-  color: black;
-  font-size: 16px;
-  padding: 16px 32px;
+	color: black;
+	font-size: 16px;
+	padding: 16px 32px;
 }
-
-/* Certificates */
 
 
 /* Footer */
@@ -655,16 +656,17 @@ footer {
 	margin-left: 16%;
 }
 
-footer .copyright{
-	padding:0 30px 0 20px;
+footer .copyright {
+	padding: 0 30px 0 20px;
 	display: flex;
-  	justify-content: space-between;
+	justify-content: space-between;
 }
 
-footer .copyright a{
+footer .copyright a {
 	text-decoration: none;
-	color:#F5F5F5;
+	color: #F5F5F5;
 }
+
 
 /* Small Screens Compatibility*/
 
@@ -674,38 +676,46 @@ footer .copyright a{
 		margin: 0 auto;
 		max-width: 80%;
 	}
-	
-	/* Place the timelime to the left */
+
 	#resume .timeline::after {
 		left: 60px;
 	}
-	/* Full-width containers */
+
 	#resume .box {
 		width: 75%;
 		padding-left: 70px;
 		padding-right: 25px;
-		left:42px;
+		left: 42px;
 		margin: 180px 0px;
 	}
-	
-	#resume .right .text-box{
+	#resume .right .text-box {
 		right: 35px;
 	}
-	
-	#resume .left .text-box{
+	#resume .left .text-box {
 		left: -35px;
 		text-align: left;
 	}
-
-	#resume a{
-		left: 8.5%;
+	#resume a {
+		left: -150px;
 		top: 550px;
+	}
+	#resume .box::after {
+		left: 7.25px;
+	}
+	#resume .title {
+		position:relative;
+		left: 70px;
+		top: 180px;
+		margin-top: 50px;
 	}
 	/* Make all right containers behave like the left ones */
 	.right {
 		left: 0%;
 	}
-	
+	#portfolio .container {
+		max-width: 300px;
+		margin-left: 10%;
+	}
 }
 
 @media(max-width: 864px) {
@@ -737,18 +747,14 @@ footer .copyright a{
 		width: 100%;
 		margin-left: 0%;
 	}
-
-	#resume{
-		left:20%;
+	#resume {
+		left: 20%;
 	}
-
-	#resume .box{
-		left:32px;
-		width:70%;
+	#resume .box {
+		left: 32px;
+		width: 70%;
 	}
-	
 	#resume .timeline::after {
 		left: 51px;
 	}
-
 }
